<resources>
    <string name="app_name" translatable="false">Calorie Calculator</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="profile">Profile</string>
    <string name="foods">Foods</string>
    <string name="calories">Calories</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="monday_cap">Monday</string>
    <string name="tuesday_cap">Tuesday</string>
    <string name="wednesday_cap">Wednesday</string>
    <string name="thursday_cap">Thursday</string>
    <string name="friday_cap">Friday</string>
    <string name="saturday_cap">Saturday</string>
    <string name="sunday_cap">Sunday</string>
    <string name="menu">Menu</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="centimeter">cm</string>
    <string name="weight">Weight</string>
    <string name="kilogram">kg</string>
    <string name="calculate_bmr">Calculate BMR</string>
    <string name="your_bmr_is">Your BMR is :</string>
    <string name="sedentary">Sedentary (no exercise)</string>
    <string name="exercise_1_3_times">Light activity (exercise 1–3 times)</string>
    <string name="exercise_4_5_times">Moderate activity (exercise 4–5 times)</string>
    <string name="exercise_6_8_times">Very active (exercise 6–8 times)</string>
    <string name="exercise_very_intense">Extra active (exercise +10 times)</string>
    <string name="daily_calories">Daily Calories :</string>
    <string name="percent" translatable="false">%</string>
    <string name="_30" translatable="false">30</string>
    <string name="_40" translatable="false">40</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="nutrition_facts_100g">Nutrition Facts (100g)</string>
    <string name="toast_fill_fields">Please fill all the fields</string>
    <string name="profile_saved">Profile saved</string>
    <string name="title_alert_dialog_food">Delete food</string>
    <string name="title_alert_dialog_category">Delete category</string>
    <string name="title_alert_dialog_dish">Delete dish</string>
    <string name="delete_alert_dialog_question">Are you sure you want to delete \«%1$s\» ?</string>
    <string name="yes_alert_dialog">Yes</string>
    <string name="successfully_remove_food">Food successfully removed : %1$s</string>
    <string name="undo_snackbar">Undo</string>
    <string name="no_alert_dialog">No</string>
    <string name="delete">Delete</string>
    <string name="fat_gram_symbol">Fats (g)</string>
    <string name="carb_gram_symbol">Carbs (g)</string>
    <string name="prot_gram_symbol">Proteins (g)</string>
    <string name="error_fill_field">Fill the field</string>
    <string name="error_fill_field_weight">The weight cannot be empty or equal to 0</string>
    <string name="gram_symbol">g</string>
    <string name="calculate">Calculate</string>
    <string name="switch_calories_input_mode">Switch calories input mode</string>
    <string name="search">Search</string>
    <string name="alert_dialog_delete_meal">Delete meal</string>
    <string name="alert_dialog_delete_all_message">Are you sure that you want to delete the meal ?</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="sort_by_category">Sort by Category</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="veggies">Veggies</string>
    <string name="fruits">Fruits</string>
    <string name="healthy_fats">Healthy Fats</string>
    <string name="oils">Oils</string>
    <string name="nothing_to_delete">Nothing to delete!!!</string>
    <string name="color">Pick a color</string>
    <string name="categories">Categories</string>
    <string name="_0" translatable="false">0</string>
    <string name="how_many_times_you_workout_per_week">How many times you workout per week :</string>
    <string name="foods_list">Foods List</string>
    <string name="add_new_food">Add New Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="add_new_category">Add New Category</string>
    <string name="categories_list">Categories List</string>
    <string name="edit_category">Edit Category</string>
    <string name="custom_calories">Custom Calories</string>
    <string name="calories_calculator">Calories Calculator</string>
    <string name="dishes">Dishes</string>
    <string name="cannot_delete_this_category">You can\'t delete this category!!!</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="macronutrient_ratio">Macronutrient ratio :</string>
    <string name="moderate_carbs">Moderate Carbs (Maintenance)</string>
    <string name="moderate_carbs_macros">Carbs 40–60%\nFats 15–25%\nProteins 25–35%</string>
    <string name="higher_carbs">Higher Carbs (Bodybuilding)</string>
    <string name="higher_carbs_macros">Carbs 30–50%\nFats 25–35%\nProteins 25–35%</string>
    <string name="lower_carbs">Lower Carbs (Fat Loss)</string>
    <string name="lower_carbs_macros">Carbs 10–30%\nFats 30–40%\nProteins 40–50%</string>
    <string name="database">Database</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="database_backed_up">Database backed up</string>
    <string name="backup_database">Backup Database</string>
    <string name="restore_database">Restore Database</string>
    <string name="nutritionix">Nutritionix</string>
    <string name="you_have_not_done_any_search_yet">You have not done any search yet.</string>
    <string name="dishes_list">Dishes List</string>
    <string name="next">Next</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="add_food">Add Food</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_change">Change \«%1$s\» with :</string>
    <string name="add_dish">Add Dish</string>

</resources>