<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/tb_menu_calculate"
        android:icon="@drawable/ic_calculate"
        android:title="@string/calculate"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/tb_menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="ifRoom" >

        <menu>
            <item
                android:id="@+id/tb_menu_sort_category"
                android:title="@string/sort_by_category"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_name"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_carb"
                android:title="@string/carbs"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_veggies"
                android:title="@string/veggies"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_prot"
                android:title="@string/proteins"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_fruits"
                android:title="@string/fruits"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_healthy_fats"
                android:title="@string/healthy_fats"
                app:showAsAction="never" />

            <item
                android:id="@+id/tb_menu_sort_oils"
                android:title="@string/oils"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/tb_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tb_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>