<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_switch_between_profile_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/switch_calories_input_mode"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gender"
        style="@style/ProfileTextView"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@id/age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_switch_between_profile_mode" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/gender"
        app:layout_constraintLeft_toRightOf="@id/gender"
        app:layout_constraintTop_toTopOf="@id/gender">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/gender_male"
            style="@style/RadioButtonProfile"
            android:text="@string/male"
            android:theme="@style/ProfileRadioButtonStyle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/gender_female"
            style="@style/RadioButtonProfile"
            android:layout_marginStart="2dp"
            android:text="@string/female"
            android:theme="@style/ProfileRadioButtonStyle" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/age"
        style="@style/ProfileTextView"
        android:text="@string/age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/age_value"
        style="@style/ProfileEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/age"
        app:layout_constraintLeft_toRightOf="@id/gender"
        app:layout_constraintTop_toTopOf="@id/age" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height"
        style="@style/ProfileTextView"
        android:text="@string/height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/height_value"
        style="@style/ProfileEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/height"
        app:layout_constraintLeft_toRightOf="@id/gender"
        app:layout_constraintTop_toTopOf="@id/height" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cm_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centimeter"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/height"
        app:layout_constraintLeft_toRightOf="@id/height_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight"
        style="@style/ProfileTextView"
        android:text="@string/weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/height" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight_value"
        style="@style/ProfileEditText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/weight"
        app:layout_constraintLeft_toRightOf="@id/gender"
        app:layout_constraintTop_toTopOf="@id/weight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_kg_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilogram"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/weight"
        app:layout_constraintLeft_toRightOf="@id/weight_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bmr_text"
        style="@style/ProfileTextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/your_bmr_is"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bmr_result"
        style="@style/ProfileTextViewMacrosResult"
        android:layout_marginStart="20dp"
        android:textColor="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="@id/tv_bmr_text"
        app:layout_constraintLeft_toRightOf="@id/tv_bmr_text"
        app:layout_constraintTop_toTopOf="@id/tv_bmr_text"
        tools:text="1750" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_exercise_per_week"
        style="@style/ProfileTextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_many_times_you_workout_per_week"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bmr_text" />

    <RadioGroup
        android:id="@+id/radio_group_activity_level"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exercise_per_week">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/level1"
            style="@style/RadioButtonProfile"
            android:text="@string/sedentary"
            android:theme="@style/ProfileRadioButtonStyle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/level2"
            style="@style/RadioButtonProfile"
            android:text="@string/exercise_1_3_times"
            android:theme="@style/ProfileRadioButtonStyle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/level3"
            style="@style/RadioButtonProfile"
            android:text="@string/exercise_4_5_times"
            android:theme="@style/ProfileRadioButtonStyle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/level4"
            style="@style/RadioButtonProfile"

            android:text="@string/exercise_6_8_times"
            android:theme="@style/ProfileRadioButtonStyle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/level5"
            style="@style/RadioButtonProfile"
            android:text="@string/exercise_very_intense"
            android:theme="@style/ProfileRadioButtonStyle" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_daily_calorie_text"
        style="@style/ProfileTextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/daily_calories"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_activity_level" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_daily_calorie_result"
        style="@style/ProfileTextViewMacrosResult"
        android:enabled="false"
        android:hint="@string/calories"
        android:inputType="number"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:textColor="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="@id/tv_daily_calorie_text"
        app:layout_constraintLeft_toRightOf="@id/tv_daily_calorie_text"
        app:layout_constraintTop_toTopOf="@id/tv_daily_calorie_text"
        tools:text="2300" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_macros_ratios_text"
        style="@style/ProfileTextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/macronutrient_ratio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_calorie_text" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@id/tv_macros_ratios_text"
        app:layout_constraintStart_toEndOf="@id/tv_macros_ratios_text"
        app:layout_constraintTop_toTopOf="@id/tv_macros_ratios_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carb"
        style="@style/ProfileTextView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_macros_ratios_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/carb_percent"
        style="@style/ProfileEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/_40"
        app:layout_constraintBottom_toBottomOf="@id/carb"
        app:layout_constraintLeft_toRightOf="@id/carb"
        app:layout_constraintTop_toTopOf="@id/carb" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/carb"
        app:layout_constraintLeft_toRightOf="@id/carb_percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carb_result"
        style="@style/ProfileTextViewMacrosResult"
        android:layout_width="60dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@id/carb"
        app:layout_constraintLeft_toRightOf="@id/percent_symbol"
        app:layout_constraintTop_toTopOf="@id/carb"
        tools:text="200" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fat"
        style="@style/ProfileTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/carb"
        app:layout_constraintTop_toBottomOf="@id/carb"  />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fat_percent"
        style="@style/ProfileEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/_30"
        app:layout_constraintBottom_toBottomOf="@id/fat"
        app:layout_constraintLeft_toRightOf="@id/fat"
        app:layout_constraintTop_toTopOf="@id/fat" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/percent_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/fat"
        app:layout_constraintLeft_toRightOf="@id/fat_percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fat_result"
        style="@style/ProfileTextViewMacrosResult"
        android:layout_width="60dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@id/fat"
        app:layout_constraintLeft_toRightOf="@id/percent_symbol"
        app:layout_constraintTop_toTopOf="@id/fat"
        tools:text="70" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gram_symbol"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/fat"
        app:layout_constraintLeft_toRightOf="@id/fat_result" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gram_symbol"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/carb"
        app:layout_constraintLeft_toRightOf="@id/carb_result" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/prot"
        style="@style/ProfileTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proteins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/carb"
        app:layout_constraintTop_toBottomOf="@id/fat" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/prot_percent"
        style="@style/ProfileEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="2"
        android:text="@string/_30"
        app:layout_constraintBottom_toBottomOf="@id/prot"
        app:layout_constraintLeft_toRightOf="@id/prot"
        app:layout_constraintTop_toTopOf="@id/prot" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/prot"
        app:layout_constraintLeft_toRightOf="@id/prot_percent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/prot_result"
        style="@style/ProfileTextViewMacrosResult"
        android:layout_width="60dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@id/prot"
        app:layout_constraintLeft_toRightOf="@id/percent_symbol"
        app:layout_constraintTop_toTopOf="@id/prot"
        tools:text="300" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gram_symbol"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintBottom_toBottomOf="@id/prot"
        app:layout_constraintLeft_toRightOf="@id/prot_result" />

</androidx.constraintlayout.widget.ConstraintLayout>