<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.allFoods.AllFoodsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@id/rv_all_foods"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_overall_background"
            android:padding="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overall_day_cal_title"
                style="@style/CardViewAllFoodsTitle"
                android:text="@string/calories"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/overall_day_fat_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overall_day_fat_title"
                style="@style/CardViewAllFoodsTitle"
                android:text="@string/fats"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/overall_day_cal_title"
                app:layout_constraintRight_toLeftOf="@id/overall_day_carb_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overall_day_carb_title"
                style="@style/CardViewAllFoodsTitle"
                android:text="@string/carbs"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/overall_day_fat_title"
                app:layout_constraintRight_toLeftOf="@id/overall_day_prot_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overall_day_prot_title"
                style="@style/CardViewAllFoodsTitle"
                android:text="@string/proteins"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/overall_day_carb_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_foods"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_title"
        tools:listitem="@layout/item_food" />

</androidx.constraintlayout.widget.ConstraintLayout>